plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "7.0.0"
    id "org.graalvm.plugin.compiler" version "0.1.0-alpha2"
}

ext.graalVersion = '21.2.0'

group 'fr.noalegeek'
version '1.0'

mainClassName = "fr.noalegeek.pepite_dor_bot.Main"

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
compileJava.options.encoding = compileTestJava.options.encoding = javadoc.options.encoding = 'UTF-8'

graal {
    version "$graalVersion"
}

repositories {
    mavenCentral()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven { url 'https://jitpack.io' }
    maven { url "https://m2.chew.pro/releases" }
}

dependencies {
    //JDA & JDA-Utilities
    implementation("net.dv8tion:JDA:4.3.0_334")
    implementation('pw.chew:jda-chewtils:1.22.0') {
        exclude group: 'pw.chew:jda-chewtils-command:1.22.0'
    }
    implementation 'com.github.TheSimpleTeam.JDA-Chewtils:jda-chewtils-command:-SNAPSHOT'
    //GraalJS
    implementation "org.graalvm.sdk:graal-sdk:$graalVersion"
    implementation "org.graalvm.js:js:$graalVersion"
    // necessary to integrate with legacy ScriptEngine based implementation
    implementation "org.graalvm.js:js-scriptengine:$graalVersion"
    //Other
    implementation group: 'org.kohsuke', name: 'github-api', version: '1.133'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation "org.mariuszgromada.math:MathParser.org-mXparser:4.4.2"
    implementation 'org.reflections:reflections:0.9.12'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'com.github.TheSimpleTeam:Spiget:main-SNAPSHOT'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}
